feat(tagsInput): add ability to disable the input

--- a/scss/bootstrap/variables.scss
+++ b/scss/bootstrap/variables.scss
@@ -10,6 +10,7 @@ $tag-color:                             #fff;
 $tag-bgcolor:                           #428bca;
 $tag-border:                            1px solid #357ebd;
 $tag-border-radius:                     4px;
+$tag-opacity-disabled:                  0.65;
 
 $tag-color-selected:                    #fff;
 $tag-bgcolor-selected:                  #d9534f;
