--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -15,6 +15,7 @@ $tag-border:                            1px solid rgb(172, 172, 172);
 $tag-border-radius:                     3px;
 $tag-color-selected:                    rgba(254, 187, 187, 1) 0%, rgba(254, 144, 144, 1) 45%, rgba(255, 92, 92, 1) 100%;
 $tag-color-invalid:                     #ff0000;
+$tag-color-disabled:                    #eee 0, #ccc 100%;
 
 $remove-button-color:                   #585858;
 $remove-button-color-active:            #ff0000;
