feat(tagsInput): enforce max tags
Disables and hides the input box when max-tags is reached.
Items can still be removed using backspace within a
focused input area.

Closes #254
Closes #283
Closes #297

--- a/scss/tags-input.scss
+++ b/scss/tags-input.scss
@@ -19,6 +19,10 @@ tags-input {
       @include box-shadow($tags-outline-box-shadow);
     }
 
+    &.max-tags-enforced .input {
+      max-width: 0;
+    }
+
     .tag-list {
       margin: 0;
       padding: 0;
