--- a/templates/tags-input.html
+++ b/templates/tags-input.html
@@ -1,5 +1,5 @@
 <div class="host" tabindex="-1" ti-transclude-append>
-  <div class="tags" ng-class="{focused: hasFocus}">
+  <div class="tags" ng-class="{focused: hasFocus, 'max-tags-enforced': maxTagsEnforced}">
     <ul class="tag-list">
       <li class="tag-item" ng-repeat="tag in tagList.items track by track(tag)" ng-class="{ selected: tag == tagList.selected }">
         <span ng-bind="getDisplayText(tag)"></span>
